--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -19,7 +19,7 @@
         <p>Resource for Nodeclipse developers</p>
 
 
-        <p class="view"><a href="https://github.com/Nodeclipse">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/Nodeclipse">View Nodeclispe on GitHub.com</a></p>
 
       </header>
       <section>
